--- a/frontEnd/account.css
+++ b/frontEnd/account.css
@@ -128,9 +128,10 @@
     background-color:green;
     cursor: pointer;
     }
-    body
-    {
-     background-image:url(back.jpg);
-     background-size:cover;
-    background-attachment:fixed;
-    }
+    html { 
+        background: url(back.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
