--- a/frontEnd/tenant.css
+++ b/frontEnd/tenant.css
@@ -35,12 +35,13 @@
     opacity:.8;
     transform:translateX(0%) translateY(+10%);
     }
-    body
-    {
-    background-image:url(back.jpg);
-    background-attachment:fixed;
-    background-size:cover;
-    }
+    html { 
+        background: url(back.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
     p
     {
     color:orange;
