--- a/frontEnd/contact.css
+++ b/frontEnd/contact.css
@@ -49,9 +49,10 @@
     letter-spacing:0px;
     }
     }
-    body
-    {
-     background-image:url(back.jpg);
-    background-size:cover;
-    background-attachment:fixed;
-    }
+    html { 
+        background: url(back.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
