--- a/frontEnd/login.css
+++ b/frontEnd/login.css
@@ -82,11 +82,12 @@
     background:transparent;
     color:white;
     }
-    body
-    {
-    background-image:url(back.jpg);
-    background-size:cover;
-    background-attachment:fixed;
+    html { 
+      background: url(back.jpg) no-repeat center center fixed; 
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
     }
     .eye
     {
