--- a/frontEnd/selectOption.css
+++ b/frontEnd/selectOption.css
@@ -1,13 +1,4 @@
-a:link{
-    color:white;
-    text-decoration: solid;
-}
-a:visited{
-    color:white;
-}
-a:hover{
-    color:orange;
-}
+
 
 #button1
     {
@@ -53,27 +44,36 @@ a:hover{
     background-color:green;
     cursor: pointer;
     }
-    ul
-    {
-     list-style:none;
-     margin:0px;
-     padding:0px;
+    ul {
+        list-style-type: none;
+        margin:0;
+        padding:0;
+        overflow:hidden;
+        background-color: black;
     }
-    ul li
-    {
-    float:left;
-    color:orange;
-    background-color:black;
-    width:337.5px;
-    opacity:.8;
-    height:40px;
-    text-align:center;
-    line-height:35px;
-    font-size:20px;
+    li {
+        float: left;
+        font-size: 20px;
+        font-family:fantasy;
     }
-    body
-    {
-    background-image:url(back.jpg);
-    background-size:cover;
-    background-attachment:fixed;
+    li a{
+
+        display: block;
+        padding:14px 130px;
+        color:white;
+        text-align:center;
+        text-decoration: none;
     }
+    li a:hover{
+        color:orange;
+    }
+    li a:visited{
+        color:white;
+    }
+    html { 
+        background: url(back.jpg) no-repeat center center fixed; 
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+      }
