--- a/frontEnd/selectOption.css
+++ b/frontEnd/selectOption.css
@@ -1,4 +1,6 @@
-
+a:hover{
+    color:orange;
+}
 
 #button1
     {
@@ -64,11 +66,11 @@
         text-align:center;
         text-decoration: none;
     }
-    li a:hover{
-        color:orange;
-    }
     li a:visited{
         color:white;
+    }
+    li a:hover{
+        color: orange;
     }
     html { 
         background: url(back.jpg) no-repeat center center fixed; 
