--- a/frontEnd/signup.css
+++ b/frontEnd/signup.css
@@ -1,3 +1,13 @@
+a:link{
+  color:white;
+ text-decoration: solid;
+   }
+ a:visited{
+   color:white;
+ }
+ a:hover{
+   color:orange;
+ }
 h1{
 text-align:center;
 color:orange;
