--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="account.css">
 </head>
 <body>
-<h1>UserName: prashanth.dussa05@gmail.com</h1>
-<h2>First Name: Prashanth</h2>
-<h3>Last Name: Dussa</h3>
-<h4>Mobile Number: 7032981227</h2>
+<h1>{{email}}</h1>
+<h2>First Name:{{firstName}} </h2>
+<h3>Last Name: {{lastName}}</h3>
+<h4>Mobile Number: {{phoneNumber}}</h2>
 <form action="#">
 <input type="submit" value="Change Password" id="button"/>
 </form>
