--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -12,9 +12,9 @@
 </form>
 <ul>
 <li><a href="intro.html" id="home">Home</a></li>
-<li><a href="Account.html" id="account">Account</a></li>
+<li><a href="/myAccount" id="account" onclick="myAccount()">Account</a></li>
 <li><a href="Contact.html" id="contact">Contact Us</a></li>
-<li><a href="login.html" id="logout">Log Out</a></li>
+<li><a href="/logout" id="logout" >Log Out</a></li>
 </ul>
 </body>
 </html>
