--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -2,9 +2,9 @@
 <html>
 <head>
 <title>Tenant</title>
-<link rel="stylesheet" href="tenant.css">
+<link rel="stylesheet" href="/css/tenant.css">
 <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.min.js"></script>
-<script src="tenant.js"></script>
+<script src="/js/tenant.js"></script>
 </head>
 <body>
 <form action="Search.html">
