--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Select Option</title>
-<link rel="stylesheet" href="selectOption.css"> 
+<link rel="stylesheet" href="/css/selectOption.css"> 
 </head>
 <body>
 <form action="Tenant.html">
