--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Account Deatils</title>
-<link rel="stylesheet" href="account.css">
+<link rel="stylesheet" href="/css/account.css">
 </head>
 <body>
 <h1>{{email}}</h1>
