--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -5,13 +5,13 @@
 </head>
 <body>
 <h1>{{email}}</h1>
-<h2>First Name:{{firstName}} </h2>
+<h2>First Name: {{firstName}} </h2>
 <h3>Last Name: {{lastName}}</h3>
 <h4>Mobile Number: {{phoneNumber}}</h2>
 <form action="#">
 <input type="submit" value="Change Password" id="button"/>
 </form>
-<form action="MyAddress.html">
+<form action="/getAddress" method="GET">
     <input type="submit" value="MyAddresses" id="button1"/>
     </form>
 </body>
