--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ownwer</title>
+<title>Owner</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/owner.css">
 </head>
 <body>
-<form action="Register.html">
+<form action="/saveAddress" method="POST">
 <div class="form-box">
 <h1>Details</h1>
 <div class="input-select">
