--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -4,10 +4,10 @@
 <link rel="stylesheet" href="/css/selectOption.css"> 
 </head>
 <body>
-<form action="Tenant.html">
+<form action="/tenant" method="GET">
 <input type="submit" value="Tenant" id="button1"/>
 </form>
-<form action="Owner.html">
+<form action="/owner" method="GET">
 <input type="submit" value="Owner" id="button2"/>
 </form>
 <ul>
