--- a/public/css/login.css
+++ b/public/css/login.css
@@ -11,7 +11,8 @@
       }
     h1{
     text-align:center;
-    color:orange;
+    font-size: 23px;
+    color:white;
     }
     h2
     {
@@ -65,7 +66,7 @@
     padding:20px;
     border-radius:20px;
     opacity:.8;
-    transform:translateX(0%) translateY(35%);
+    transform:translateX(0%) translateY(40%);
     }
     .input-box
     {
@@ -93,7 +94,19 @@
     {
     position:absolute;
     }
+    .eye1
+    {
+    position:absolute;
+    }
+    .eye2
+    {
+    position:absolute;
+    }
     #hide1
+    {
+    display:none;
+    }
+    #hide3
     {
     display:none;
     }
