--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -5,10 +5,10 @@
 </head>
 <body>
 <h1>{{email}}</h1>
-<h2>First Name: {{firstName}} </h2>
-<h3>Last Name: {{lastName}}</h3>
-<h4>Mobile Number: {{phoneNumber}}</h2>
-<form action="#">
+<h2>First Name: <span>{{firstName}}</span> </h2>
+<h3>Last Name: <span>{{lastName}}</span></h3>
+<h4>Mobile Number: <span>{{phoneNumber}}</span></h2>
+<form action="/changePassword" method="GET">
 <input type="submit" value="Change Password" id="button"/>
 </form>
 <form action="/getAddress" method="GET">
