--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>My Addresses</title>
+        <title>Houses for rent</title>
         <style>
             html { 
                      background: url(/css/back.jpg) no-repeat center center fixed; 
@@ -17,7 +17,7 @@
                  margin:auto;
                  padding:10px;
                  text-align:center;
-                 transform:translateX(0%) translateY(30%);
+                 transform:translateX(0%) translateY(0%);
              }
              p{
                  color: white;
@@ -28,11 +28,14 @@
                  color: orange;
                  font-size:20px;
                  font-family:cursive;
-             }  
+             } 
+            
         </style>
     </head>
     <body>
         <div>
+            <p>Owner Name: <span>{{firstName}} {{lastName}}</span></p>
+            <p>Email: <span>{{email}}</span></p>
             <p>State: <span>{{state}}</span></p>
             <p>District: <span>{{district}}</span></p>
             <p>Town: <span>{{town}}</span></p>
@@ -40,7 +43,11 @@
             <p>Address: <span>{{address}}</span></p>
             <p>House Description: <span>{{houseDescription}}</span></p>
             <p>What's app Number: <span>{{contactNumber}}</span></p>
-
-        </div>
+            <p>Down below are the status of necessary places within a radius of 1km</p>
+            <p>Vegtable market: <span>{{veg}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shopping mall: <span>{{shop}}</span></p>
+            <p>Milk booth: <span>{{milk}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grocery store: <span>{{grocery}}</span></p>
+            <p>Hospital: <span>{{hospital}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cinema hall: <span>{{cinema}}</span></p>
+            <p>Bus stand: <span>{{bus}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Railway station: <span>{{rail}}</span></p>
+      </div>
     </body>
 </html>
