--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -2,6 +2,7 @@
 <head>
 <title>Account Deatils</title>
 <link rel="stylesheet" href="/css/account.css">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
 <h1>{{email}}</h1>
