--- a/views/Tenant.hbs
+++ b/views/Tenant.hbs
@@ -4,6 +4,7 @@
 <title>Tenant</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="/css/tenant.css">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
 <form action="/findAddress" method="POST">
