--- a/views/address.hbs
+++ b/views/address.hbs
@@ -30,6 +30,7 @@
                  font-family:cursive;
              }  
         </style>
+            <link rel="icon" href="icon.png" type="image/png">
     </head>
     <body>
         <div>
