--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -3,6 +3,7 @@
 <title>Change Password</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="icon" href="icon.png" type="image/png">
 <script src="/js/changePassword.js"></script>
 </head>
 <body>
