--- a/views/result.hbs
+++ b/views/result.hbs
@@ -31,6 +31,7 @@
              } 
             
         </style>
+            <link rel="icon" href="icon.png" type="image/png">
     </head>
     <body>
         <div>
