--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -1,7 +1,8 @@
 <html>
 <head>
 <title>Select Option</title>
-<link rel="stylesheet" href="/css/selectOption.css"> 
+<link rel="stylesheet" href="/css/selectOption.css">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
 <form action="/tenant" method="GET">
