--- a/views/changePassword.hbs
+++ b/views/changePassword.hbs
@@ -1,35 +1,40 @@
 <html>
-<head>
-<title>Change Password</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="/css/login.css">
-    <link rel="icon" href="icon.png" type="image/png">
-<script src="/js/changePassword.js"></script>
-</head>
-<body>
-<form action="/newPassword" method="POST"> 
-<div class="form-box">
-<h1>Change Password</h1>
 
-<div class="input-box">
-<i class="fa fa-envelope" style="color:orange;"></i>
-<input type="password" placeholder="Current password" name="currentPassword" id="currentPassword" minlength="6" required>
-<span class="eye1" onclick="myFunction1()">
-<i id="hide1" class="fa fa-eye" style="color:orange;"></i>
-<i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
-</span>
-</div>
-<div class="input-box">
-<i class="fa fa-key" style="color:orange;"></i>
-<input type="password" placeholder="New password" id="newPassword" name="newPassword" minlength="6" required>
-<span class="eye2" onclick="myFunction2()">
-<i id="hide3" class="fa fa-eye" style="color:orange;"></i>
-<i id="hide4" class="fa fa-eye-slash" style="color:orange;"></i>
-</span>
-</div>
-<input type="submit" value="Change" id="button"/>
-</form>
-</div>
+<head>
+    <title>Change Password</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="icon" href="icon.png" type="image/png">
+    <script src="/js/changePassword.js"></script>
+</head>
+
+<body>
+    <form action="/newPassword" method="POST">
+        <div class="form-box">
+            <h1>Change Password</h1>
+
+            <div class="input-box">
+                <i class="fa fa-envelope" style="color:orange;"></i>
+                <input type="password" placeholder="Current password" name="currentPassword" id="currentPassword"
+                    minlength="6" required>
+                <span class="eye1" onclick="myFunction1()">
+                    <i id="hide1" class="fa fa-eye" style="color:orange;"></i>
+                    <i id="hide2" class="fa fa-eye-slash" style="color:orange;"></i>
+                </span>
+            </div>
+            <div class="input-box">
+                <i class="fa fa-key" style="color:orange;"></i>
+                <input type="password" placeholder="New password" id="newPassword" name="newPassword" minlength="6"
+                    required>
+                <span class="eye2" onclick="myFunction2()">
+                    <i id="hide3" class="fa fa-eye" style="color:orange;"></i>
+                    <i id="hide4" class="fa fa-eye-slash" style="color:orange;"></i>
+                </span>
+            </div>
+            <input type="submit" value="Change" id="button" />
+    </form>
+    </div>
 
 </body>
+
 </html>
