--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,61 +1,55 @@
-    h1
-    {
-    font-size:20px;
-    width:600px;
-    background-color:black;
-    border-radius:10px;
-    margin:auto;
-    padding:10px;
-    color:white;
-    text-align:center;
-    font-family:cursive;
-    position:absolute;
-    top:50%;
-    opacity:.8;
-    left:50%;
-    transform:translateX(-53%) translateY(-260%);
-    animation: text 3s 1;
-    }
-    h2
-    {
-    font-size:20px;
-    width:600px;
-    background-color:black;
-    border-radius:10px;
-    margin:auto;
-    color:white;
-    text-align:center;
-    font-family:cursive;
-    opacity:.8;
-    position:absolute;
-    padding:10px;
-    top:50%;
-    left:50%;
-    transform:translateX(-53%) translateY(+85%);
-    animation: text 3s 1;
-    }
-    @keyframes text
-    {
-    0%
-    {
-    color:black;
-    }
-    35%
-    {
-    letter-spacing:5px;
-    }
-    85%
-    {
-    letter-spacing:0px;
-    }
-    }
-    html { 
-        background: url(back.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
-    span{
-      color:orange;
-    }
+h1 {
+     font-size: 20px;
+     width: 600px;
+     background-color: black;
+     border-radius: 10px;
+     margin: auto;
+     padding: 10px;
+     color: white;
+     text-align: center;
+     font-family: cursive;
+     position: absolute;
+     top: 50%;
+     opacity: 0.8;
+     left: 50%;
+     transform: translateX(-53%) translateY(-260%);
+     animation: text 3s 1;
+}
+h2 {
+     font-size: 20px;
+     width: 600px;
+     background-color: black;
+     border-radius: 10px;
+     margin: auto;
+     color: white;
+     text-align: center;
+     font-family: cursive;
+     opacity: 0.8;
+     position: absolute;
+     padding: 10px;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-53%) translateY(+85%);
+     animation: text 3s 1;
+}
+@keyframes text {
+     0% {
+          color: black;
+     }
+     35% {
+          letter-spacing: 5px;
+     }
+     85% {
+          letter-spacing: 0px;
+     }
+}
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+}
+span {
+     color: orange;
+}
