--- a/public/css/selectOption.css
+++ b/public/css/selectOption.css
@@ -1,81 +1,76 @@
-a:hover{
-    color:orange;
+a:hover {
+     color: orange;
 }
 
-#button1
-    {
-    width:150px;
-    font-size:20px;
-    color:white;
-    height:50px;
-    opacity:.8;
-    border-radius:10px;
-    background-color:black;
-    text-align:center;
-    font-family:fantasy;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translateX(-143%) translateY(+70%);
-    }
-    
-    #button1:hover
-    {
-    background-color:orange;
-    cursor: pointer;
-    }
-    #button2
-    {
-    width:150px;
-    font-size:20px;
-    color:white;
-    opacity:.8;
-    height:50px;
-    border-radius:10px;
-    background-color:black;
-    text-align:center;
-    font-family:fantasy;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translateX(-13%) translateY(+70%);
-    }
-    
-    #button2:hover
-    {
-    background-color:green;
-    cursor: pointer;
-    }
-    ul {
-        list-style-type: none;
-        margin:0;
-        padding:0;
-        overflow:hidden;
-        background-color: black;
-    }
-    li {
-        float: left;
-        font-size: 20px;
-        font-family:fantasy;
-    }
-    li a{
+#button1 {
+     width: 150px;
+     font-size: 20px;
+     color: white;
+     height: 50px;
+     opacity: 0.8;
+     border-radius: 10px;
+     background-color: black;
+     text-align: center;
+     font-family: fantasy;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-143%) translateY(+70%);
+}
 
-        display: block;
-        padding:14px 130px;
-        color:white;
-        text-align:center;
-        text-decoration: none;
-    }
-    li a:visited{
-        color:white;
-    }
-    li a:hover{
-        color: orange;
-    }
-    html { 
-        background: url(back.jpg) no-repeat center center fixed; 
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-      }
+#button1:hover {
+     background-color: orange;
+     cursor: pointer;
+}
+#button2 {
+     width: 150px;
+     font-size: 20px;
+     color: white;
+     opacity: 0.8;
+     height: 50px;
+     border-radius: 10px;
+     background-color: black;
+     text-align: center;
+     font-family: fantasy;
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translateX(-13%) translateY(+70%);
+}
+
+#button2:hover {
+     background-color: green;
+     cursor: pointer;
+}
+ul {
+     list-style-type: none;
+     margin: 0;
+     padding: 0;
+     overflow: hidden;
+     background-color: black;
+}
+li {
+     float: left;
+     font-size: 20px;
+     font-family: fantasy;
+}
+li a {
+     display: block;
+     padding: 14px 130px;
+     color: white;
+     text-align: center;
+     text-decoration: none;
+}
+li a:visited {
+     color: white;
+}
+li a:hover {
+     color: orange;
+}
+html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
+}
