--- a/views/address.hbs
+++ b/views/address.hbs
@@ -4,7 +4,7 @@
     <title>My Addresses</title>
     <style>
         html {
-            background: url(/css/back.jpg) no-repeat center center fixed;
+            background: url(/css/back.png) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
