--- a/views/result.hbs
+++ b/views/result.hbs
@@ -4,7 +4,7 @@
     <title>Houses for rent</title>
     <style>
         html {
-            background: url(/css/back.jpg) no-repeat center center fixed;
+            background: url(/css/back.png) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -53,13 +53,16 @@
         </p>
         <p>Milk booth:
             <span>{{milk}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grocery store:
-            <span>{{grocery}}</span></p>
+            <span>{{grocery}}</span>
+        </p>
         <p>Hospital:
             <span>{{hospital}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Cinema
-            hall: <span>{{cinema}}</span></p>
+            hall: <span>{{cinema}}</span>
+        </p>
         <p>Bus stand:
             <span>{{bus}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Railway
-            station: <span>{{rail}}</span></p>
+            station: <span>{{rail}}</span>
+        </p>
     </div>
 </body>
 
