--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,6 +10,8 @@ a:hover {
 }
 h1 {
      text-align: center;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      font-size: 23px;
      color: white;
 }
