--- a/public/css/login.css
+++ b/public/css/login.css
@@ -18,10 +18,15 @@ h1 {
 h2 {
      color: orange;
      font-size: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(+70%) translateY(-150%);
 }
 p {
      color: orange;
+     font-size: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(10%) translateY(+50%);
 }
 option {
