--- a/public/css/account.css
+++ b/public/css/account.css
@@ -7,7 +7,8 @@ h1 {
      padding: 10px;
      color: white;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      opacity: 0.8;
      position: absolute;
      top: 50%;
@@ -23,7 +24,8 @@ h2 {
      margin: auto;
      color: white;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      padding: 10px;
      opacity: 0.8;
@@ -41,7 +43,8 @@ h3 {
      color: white;
      opacity: 0.8;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      padding: 10px;
      top: 50%;
@@ -58,7 +61,8 @@ h4 {
      opacity: 0.8;
      color: white;
      text-align: center;
-     font-family: cursive;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      position: absolute;
      padding: 10px;
      top: 50%;
@@ -125,4 +129,6 @@ html {
 }
 span {
      color: orange;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
