--- a/public/css/tenant.css
+++ b/public/css/tenant.css
@@ -2,19 +2,27 @@ h1 {
      text-align: center;
      color: white;
      font-size: 25px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h2 {
      color: orange;
      font-size: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(18%) translateY(+50%);
 }
 h3 {
      color: white;
      font-size: 15px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(18%) translateY(+20%);
 }
 p {
      color: orange;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(10%) translateY(+50%);
 }
 #button {
@@ -50,12 +58,10 @@ html {
      -o-background-size: cover;
      background-size: cover;
 }
-p {
-     color: orange;
-     transform: translateX(10%) translateY(+50%);
-}
 option {
      color: orange;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      background-color: black;
 }
 select {
@@ -63,6 +69,8 @@ select {
      color: white;
      width: 200px;
      height: 25px;
+     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+          Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      border-radius: 5px;
      cursor: pointer;
 }
