--- a/views/address.hbs
+++ b/views/address.hbs
@@ -25,13 +25,13 @@
         p {
             color: white;
             font-size: 20px;
-            font-family: cursive;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         span {
             color: orange;
             font-size: 20px;
-            font-family: cursive;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
     </style>
     <link rel="icon" href="icon.png" type="image/png">
