--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Houses for rent</title>
+    <title>Available Houses</title>
     <style>
         html {
             background: url(/css/back.png) no-repeat center center fixed;
@@ -25,13 +25,13 @@
         p {
             color: white;
             font-size: 20px;
-            font-family: cursive;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
         span {
             color: orange;
             font-size: 20px;
-            font-family: cursive;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
     </style>
     <link rel="icon" href="icon.png" type="image/png">
