--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -10,7 +10,8 @@ h2 {
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     transform: translateX(18%) translateY(+50%);
+     /* transform: translateX(18%) translateY(+50%); */
+     text-align: left;
 }
 h3 {
      color: white;
