--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -10,8 +10,7 @@ h2 {
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-     /* transform: translateX(18%) translateY(+50%); */
-     text-align: left;
+     transform: translateX(18%) translateY(+50%);
 }
 h3 {
      color: white;
@@ -44,7 +43,7 @@ p {
      background-color: green;
 }
 .form-box {
-     width: 400px;
+     width: 500px;
      margin: auto;
      background: black;
      padding: 20px;
