--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -6,7 +6,7 @@ h1 {
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h2 {
-     color: orange;
+     color: lightgreen;
      font-size: 15px;
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
