--- a/public/css/owner.css
+++ b/public/css/owner.css
@@ -19,7 +19,7 @@ h3 {
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      transform: translateX(18%) translateY(+20%);
 }
-.checkbox:checked:before {
+.checkbox1:checked:before {
      background-color: green;
 }
 p {
