--- a/views/Owner.hbs
+++ b/views/Owner.hbs
@@ -57,18 +57,18 @@
       </div>
       <h2>please select these if they can be accesible within</h2>
       <h2>1km radius from your current location</h2>
-      <h3><input type="checkbox" class="checkbox" name="veg">&nbsp;Vegetable Market
+      <h3><input type="checkbox" class="checkbox1" name="veg">&nbsp;Vegetable Market
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="checkbox" class="checkbox" name="shop">&nbsp;Shopping Mall<br><br>
-        <input type="checkbox" class="checkbox" name="milk">&nbsp;Milk Booth
+        <input type="checkbox" class="checkbox2" name="shop">&nbsp;Shopping Mall<br><br>
+        <input type="checkbox" class="checkbox3" name="milk">&nbsp;Milk Booth
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="checkbox" class="checkbox" name="grocery">&nbsp;Grocery Store<br><br>
-        <input type="checkbox" class="checkbox" name="hospital">&nbsp;Hospital
+        <input type="checkbox" class="checkbox4" name="grocery">&nbsp;Grocery Store<br><br>
+        <input type="checkbox" class="checkbox5" name="hospital">&nbsp;Hospital
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="checkbox" class="checkbox" name="cinema">&nbsp;Cinema Hall<br><br>
-        <input type="checkbox" class="checkbox" name="bus">&nbsp;Bus Stand
+        <input type="checkbox" class="checkbox6" name="cinema">&nbsp;Cinema Hall<br><br>
+        <input type="checkbox" class="checkbox7" name="bus">&nbsp;Bus Stand
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <input type="checkbox" class="checkbox" name="rail">&nbsp;Railway Station
+        <input type="checkbox" class="checkbox8" name="rail">&nbsp;Railway Station
       </h3>
       <input type="submit" value="Continue" id="button" />
   </form>
