--- a/views/Account.hbs
+++ b/views/Account.hbs
@@ -15,7 +15,7 @@
             <input type="submit" value="Change Password" id="button" />
         </form>
         <form action="/getAddress" method="GET">
-            <input type="submit" value="MyAddresses" id="button1" />
+            <input type="submit" value="My Address" id="button1" />
         </form>
 </body>
 
