--- a/views/result.hbs
+++ b/views/result.hbs
@@ -15,7 +15,7 @@
             background-color: black;
             border-radius: 30px;
             opacity: .8;
-            width: 50%;
+            width: 60%;
             margin: auto;
             padding: 10px;
             text-align: center;
@@ -24,6 +24,12 @@
 
         p {
             color: white;
+            font-size: 20px;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+
+        h1 {
+            color: lightgreen;
             font-size: 20px;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
@@ -48,7 +54,7 @@
         <p>Address: <span>{{address}}</span></p>
         <p>House Description: <span>{{houseDescription}}</span></p>
         <p>What's app Number: <span>{{contactNumber}}</span></p>
-        <p>Down below are the status of necessary places within a radius of 1km</p>
+        <h1>Down below are the status of necessary places within a radius of 1km</h1>
         <p>Vegtable market: <span>{{veg}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shopping mall: <span>{{shop}}</span>
         </p>
         <p>Milk booth:
