--- a/views/result.hbs
+++ b/views/result.hbs
@@ -34,17 +34,9 @@
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
 
-        span.left {
+        span {
             color: orange;
             font-size: 20px;
-            text-align: left;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-
-        span.right {
-            color: orange;
-            font-size: 20px;
-            text-align: right;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
     </style>
@@ -63,8 +55,7 @@
         <p>House Description: <span>{{houseDescription}}</span></p>
         <p>What's app Number: <span>{{contactNumber}}</span></p>
         <h1>Down below are the status of necessary places within a radius of 1km</h1>
-        <p>Vegtable market: <span class="left">{{veg}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shopping mall: <span
-                class="right">{{shop}}</span>
+        <p>Vegtable market: <span>{{veg}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Shopping mall: <span>{{shop}}</span>
         </p>
         <p>Milk booth:
             <span>{{milk}}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Grocery store:
