--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -13,7 +13,7 @@ h1 {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      font-size: 30px;
-     color: white;
+     color: red;
 }
 h2 {
      color: orange;
