--- a/public/css/mlogin.css
+++ b/public/css/mlogin.css
@@ -13,7 +13,7 @@ h1 {
      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
           Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
      font-size: 30px;
-     color: red;
+     color: white;
 }
 h2 {
      color: orange;
@@ -96,6 +96,13 @@ select {
 #hide3 {
      display: none;
 }
+
 html {
+     background: url(back.png) no-repeat center center fixed;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+     -o-background-size: cover;
+     background-size: cover;
      overflow: hidden;
+
 }
