--- a/views/selectOption.hbs
+++ b/views/selectOption.hbs
@@ -2,7 +2,8 @@
 
 <head>
     <title>Select Option</title>
-    <link rel="stylesheet" href="/css/selectOption.css">
+    <link rel="stylesheet" media="screen and (min-width: 500px)" href="/css/selectOption.css">
+    <link rel="stylesheet" media="screen and (max-width: 499px)" href="/css/mselectOption.css">
     <link rel="icon" href="icon.png" type="image/png">
 </head>
 
