--- a/public/css/mselectOption.css
+++ b/public/css/mselectOption.css
@@ -47,6 +47,7 @@ ul {
      margin: 0;
      padding: 0;
      overflow: hidden;
+     margin-left: -8px;
      background-color: black;
 }
 li {
@@ -56,7 +57,7 @@ li {
 }
 li a {
      display: block;
-     padding: 14px 15px;
+     padding: 14px 10px;
      color: white;
      text-align: center;
      text-decoration: none;
