--- a/public/css/mselectOption.css
+++ b/public/css/mselectOption.css
@@ -49,6 +49,7 @@ ul {
      overflow: hidden;
      margin-left: -8px;
      margin-right: -8px;
+     margin-top: -16px;
      background-color: black;
 }
 li {
